docs/v2.1.x/parallax-client/fundamentals/cli.mdx
---
title: 'Command-line options'
---

Parallax ships four binaries, mirroring Bitcoin Core's `bitcoind` / `bitcoin-cli` / `bitcoin-wallet` / `bitcoin` layout:

- **`parallaxd`** — the full-node daemon. Runs the node, serves JSON-RPC over HTTP/WS/IPC, and hosts the account/chain/db/console subcommands used to bootstrap and maintain the node.
- **`parallax-cli`** — the JSON-RPC client. Talks to a running `parallaxd` over its IPC socket (or `--rpc http://…`) and exposes a small set of ergonomic sugar commands (`info`, `peers`, `balance`, `sendraw`, …).
- **`parallax-wallet`** — the offline wallet tool. Operates directly on keystore files on disk, never talks to a running node, and is covered in full on the [parallax-wallet](../tools/parallax-wallet) page.
- **`parallax`** — a thin multi-call wrapper. `parallax node <args>` dispatches to `parallaxd`; `parallax rpc <args>` dispatches to `parallax-cli`; `parallax wallet <args>` dispatches to `parallax-wallet`.

The full, authoritative command list for each binary is emitted by the binary itself:

```sh
parallaxd --help
parallax-cli --help
parallax-wallet --help
parallax help
```

The rest of this page is a quick reference to help you decide which binary a given task belongs to.

## `parallaxd` — daemon subcommands

Run under `parallaxd <subcommand>` (or `parallax node <subcommand>`). These commands operate on local on-disk state (the datadir, keystore, chaindata) and generally do not require a running daemon.

| Category | Commands |
| --- | --- |
| Blockchain | `init`, `import`, `export`, `import-preimages`, `export-preimages`, `dump`, `dumpgenesis` |
| Accounts | `account` (list/new/update/import subcommands) |
| Database | `db`, `removedb`, `snapshot` |
| Console | `attach`, `console`, `js` |
| XHash | `makecache`, `makedag` |
| Misc | `dumpconfig`, `license`, `version`, `version-check` |

Invoking `parallaxd` with no subcommand runs the node itself (the default action).

## `parallax-cli` — RPC sugar subcommands

Run under `parallax-cli <subcommand>` (or `parallax rpc <subcommand>`). Each of these issues a JSON-RPC call against a running `parallaxd`, auto-discovering the IPC socket at `<datadir>/parallax.ipc` unless `--rpc` is given.

| Category | Commands |
| --- | --- |
| Lifecycle | `start`, `stop`, `info`, `uptime`, `loglevel`, `trace` |
| Chain | `chaininfo`, `blockcount`, `syncing`, `tip`, `getblock`, `getblockhash`, `getheader`, `gettx`, `getreceipt` |
| Network | `netinfo`, `peers`, `addpeer`, `removepeer`, `addtrusted`, `removetrusted`, `addnode`, `removenode`, `addrbook-status`, `addrbook-resetkey`, `dialv2`, `setban`, `listbanned`, `clearbanned` |
| Mempool | `mempool`, `mempool-content`, `sendraw` |
| Accounts | `listaccounts`, `newaccount`, `balance`, `nonce`, `code`, `storage`, `unlock`, `lock`, `sign`, `sendtx` |
| Gas | `gasprice`, `estimategas` |
| Mining | `mining`, `startmining`, `stopmining`, `setcoinbase`, `setextra` |
| Utilities | `decoderaw`, `toaddr`, `dbstats` |

Output conventions match `bitcoin-cli`: object responses are pretty-printed JSON (2-space indent, HTML escaping disabled), scalar responses are bare values followed by a newline (so `$(parallax-cli blockcount)` is directly pipeable in shell scripts), and mutating commands print nothing on success.

The global flag set for `parallax-cli` is intentionally tiny:

| Flag | Purpose |
| --- | --- |
| `--datadir <path>` | Where to look for the IPC socket when `--rpc` is unset. Defaults to the platform's standard Parallax datadir. |
| `--testnet` | Resolve paths relative to `<datadir>/testnet/` instead of `<datadir>/`. |
| `--rpc <url>` | Override the endpoint. Accepts an IPC path or `http://`, `ws://` URL. |

## `parallax-wallet` — offline wallet subcommands

Run under `parallax-wallet <subcommand>` (or `parallax wallet <subcommand>`). Every command operates directly on files on disk — no running daemon is required or contacted — which makes the binary suitable for air-gapped, cold-signing workflows.

| Category | Commands |
| --- | --- |
| Keystore directory | `list`, `new`, `update`, `import`, `info`, `dump`, `createfromdump` |
| Single keyfile | `generate`, `inspect`, `changepassword`, `signmessage`, `verifymessage`, `signtx` |

See the [parallax-wallet](../tools/parallax-wallet) page for flags, password handling and worked examples.

## `parallax` — wrapper

```
parallax node   [args...]   run the parallaxd full-node daemon
parallax rpc    [args...]   send an RPC via parallax-cli
parallax wallet [args...]   run an offline wallet command via parallax-wallet
parallax help               show wrapper help
parallax version            print version information
```

The wrapper forwards every argument after `node`, `rpc` or `wallet` verbatim to the companion binary. On Unix it replaces itself with the target via `syscall.Exec`, so the companion's process signals, exit codes, and terminal attachment behave exactly as if it had been invoked directly.
